Bug 822674.  Give RTCPeerConnection a sane classinfo.  r=jst,jesup.  r=peterv pending