dom/base/nsDOMClassInfoClasses.h
@@ -421,4 +421,5 @@ DOMCI_CLASS(MozTimeManager)
 
 #ifdef MOZ_WEBRTC
 DOMCI_CLASS(DataChannel)
+DOMCI_CLASS(RTCPeerConnection)
 #endif
